fix number of project

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                           </div>
                           <p class="slider--item-title">3. Covid Report</p>
                           <p class="slider--item-description">
-                            (React.js, express.js)
+                            (React.js, Express.js)
                           </p>
                         </a>
                       </li>
@@ -186,7 +186,7 @@
                           </div>
                           <p class="slider--item-title">4. E-Commerce store</p>
                           <p class="slider--item-description">
-                            (React.js, express.js)
+                            (React.js, Express.js)
                           </p>
                         </a>
                       </li>
