fix number of project

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <h2>PROJECTS</h2>
                   <div class="work--lockup">
                     <ul class="slider">
-                      <!-- 17 latest ----------------- -->
+                      <!-- 16 latest ----------------- -->
                       <li class="slider--item slider--item-left">
                         <a href="">
                           <div class="slider--item-image">
@@ -130,7 +130,7 @@
                               alt="guess-game"
                             />
                           </div>
-                          <p class="slider--item-title">17. PACO</p>
+                          <p class="slider--item-title">16. PACO</p>
                           <p class="slider--item-description">(Flutter)</p>
                         </a>
                       </li>
@@ -186,7 +186,7 @@
                           </div>
                           <p class="slider--item-title">4. E-Commerce store</p>
                           <p class="slider--item-description">
-                            (React.js, Express.js)
+                            (React.js, Express.js, LINE)
                           </p>
                         </a>
                       </li>
@@ -261,7 +261,7 @@
                               alt="guess-game"
                             />
                           </div>
-                          <p class="slider--item-title">9.FWD Dashboard</p>
+                          <p class="slider--item-title">9. FWD Dashboard</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript,<br />
                             SWR, Valibot )
@@ -277,7 +277,7 @@
                               alt="guess-game"
                             />
                           </div>
-                          <p class="slider--item-title">10 .Custom Viz</p>
+                          <p class="slider--item-title">10. Custom Viz</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript, SWR,<br />
                             Valibot, Virtualization )
