feat: add image modal to each project

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                   </div>
                 </div>
               </li>
+              <!-- Project part -->
               <li class="l-section section">
                 <div class="work">
                   <h2>PROJECTS</h2>
@@ -123,98 +124,101 @@
                     <ul class="slider">
                       <!-- 16 latest ----------------- -->
                       <li class="slider--item slider--item-left">
-                        <a href="">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/paco.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/paco.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">16. PACO</p>
                           <p class="slider--item-description">(Flutter)</p>
                         </a>
                       </li>
                       <!-- 1 ----------------- -->
                       <li class="slider--item slider--item-center">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/guess-game.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/guess-game.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">1. Guess me game</p>
                           <p class="slider--item-description">(HTML, CSS)</p>
                         </a>
                       </li>
                       <!-- 2 ----------------- -->
                       <li class="slider--item slider--item-right">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/dice-game.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/dice-game.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">2. Dice Me Game</p>
                           <p class="slider--item-description">(HTML, CSS)</p>
                         </a>
                       </li>
                       <!-- 3 ----------------- -->
                       <li class="slider--item">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/covid-report.png"
-                              alt="Metiew and Smith"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/covid-report.png"
+                            alt="Metiew and Smith"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">3. Covid Report</p>
                           <p class="slider--item-description">
-                            (React.js, Express.js)
+                            (React.js, Express.js, MYSQL)
                           </p>
                         </a>
                       </li>
                       <!-- 4 ----------------- -->
                       <li class="slider--item">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/e-commerce.png"
-                              alt="Alex Nowak"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/e-commerce.png"
+                            alt="Alex Nowak"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">4. E-Commerce store</p>
                           <p class="slider--item-description">
-                            (React.js, Express.js, LINE)
+                            (React.js, Express.js, LINE, MYSQL)
                           </p>
                         </a>
                       </li>
                       <!-- 5 ----------------- -->
                       <li class="slider--item">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/easy-cafe.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/easy-cafe.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">5. Easy Cafe</p>
                           <p class="slider--item-description">
-                            (React.js, Redux, Express.js, LINE)
+                            (React.js, Redux, Express.js, LINE, MYSQL)
                           </p>
                         </a>
                       </li>
                       <!-- 6 ----------------- -->
                       <li class="slider--item">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/fwd.gif"
-                              alt="guess-game"
-                            />
-                          </div>
-                          <p class="slider--item-title">6. FWD insurance</p>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/fwd.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a
+                          href="https://www.maxwealthadvisorgroup.com"
+                          target="_blank"
+                        >
+                          <p class="slider--item-title">6. Max wealth</p>
                           <p class="slider--item-description">
                             (HTML, CSS, JavaScript)
                           </p>
@@ -222,13 +226,13 @@
                       </li>
                       <!-- 7 ----------------- -->
                       <li class="slider--item">
-                        <a href="#">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/influally.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/influally.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="https://influally.com/" target="_blank">
                           <p class="slider--item-title">7. Influally</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript, SWR, <br />Valibot,
@@ -238,13 +242,13 @@
                       </li>
                       <!-- 8 ----------------- -->
                       <li class="slider--item">
-                        <a href="#">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/social-insight.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/social-insight.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">8. Social Insight</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript, <br />
@@ -254,13 +258,13 @@
                       </li>
                       <!-- 9 ----------------- -->
                       <li class="slider--item">
-                        <a href="#">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/fwd-dashboard.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/fwd-dashboard.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">9. FWD Dashboard</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript,<br />
@@ -270,13 +274,13 @@
                       </li>
                       <!-- 10 ----------------- -->
                       <li class="slider--item">
-                        <a href="#">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/custom-viz.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/custom-viz.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">10. Custom Viz</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript, SWR,<br />
@@ -286,13 +290,16 @@
                       </li>
                       <!-- 11 ----------------- -->
                       <li class="slider--item">
-                        <a href="https://own-media-management-dev.zrinf.io/">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/omm.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/omm.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a
+                          href="https://own-media-management-dev.zrinf.io/"
+                          target="_blank"
+                        >
                           <p class="slider--item-title">
                             11. Own media management
                           </p>
@@ -304,13 +311,13 @@
                       </li>
                       <!-- 12 ----------------- -->
                       <li class="slider--item">
-                        <a href="https://own-media-management-dev.zrinf.io/">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/zanroo-admin.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/zanroo-admin.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">12. Zanroo Admin</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript,<br />
@@ -320,13 +327,13 @@
                       </li>
                       <!-- 13 ----------------- -->
                       <li class="slider--item">
-                        <a href="https://own-media-management-dev.zrinf.io/">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/election.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/election.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">
                             13. Election 2023 x ONE31
                           </p>
@@ -338,13 +345,16 @@
                       </li>
                       <!-- 14 ----------------- -->
                       <li class="slider--item">
-                        <a href="https://dev.masterdsp.com/operation">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/dsp.png"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/dsp.png"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a
+                          href="https://dev.masterdsp.com/operation"
+                          target="_blank"
+                        >
                           <p class="slider--item-title">14. DSP Web</p>
                           <p class="slider--item-description">
                             (React.js, Next.js, Typescript,<br />
@@ -354,13 +364,13 @@
                       </li>
                       <!-- 15 ----------------- -->
                       <li class="slider--item">
-                        <a href="">
-                          <div class="slider--item-image">
-                            <img
-                              src="assets/img/project/dsp-mobile.gif"
-                              alt="guess-game"
-                            />
-                          </div>
+                        <div class="slider--item-image">
+                          <img
+                            src="assets/img/project/dsp-mobile.gif"
+                            alt="guess-game"
+                          />
+                        </div>
+                        <a href="#" style="cursor: default">
                           <p class="slider--item-title">15. DSP Mobile</p>
                           <p class="slider--item-description">
                             (Flutter, GetX)
@@ -415,7 +425,6 @@
                   </div>
                 </div>
               </li>
-
               <li class="l-section section">
                 <div class="intro">
                   <h1>MY SKILLS</h1>
@@ -454,7 +463,58 @@
         <li>CONTACT</li>
       </ul>
     </div>
+    <!-- Image Modal -->
+    <div class="modal" id="imageModal">
+      <div class="modal-content">
+        <button class="close-modal" id="closeModal">&times;</button>
+        <img
+          class="modal-image"
+          id="modalImage"
+          src="/placeholder.svg"
+          alt="Modal Image"
+        />
+      </div>
+    </div>
 
+    <script>
+      // Get all slider images
+      const sliderImages = document.querySelectorAll(".slider--item-image img");
+      const modal = document.getElementById("imageModal");
+      const modalImage = document.getElementById("modalImage");
+      const closeModal = document.getElementById("closeModal");
+
+      // Add click event to each image
+      sliderImages.forEach((image) => {
+        image.addEventListener("click", function () {
+          modalImage.src = this.src;
+          modalImage.alt = this.alt;
+          modal.classList.add("active");
+          document.body.style.overflow = "hidden"; // Prevent scrolling when modal is open
+        });
+      });
+
+      // Close modal when clicking the close button
+      closeModal.addEventListener("click", function () {
+        modal.classList.remove("active");
+        document.body.style.overflow = ""; // Re-enable scrolling
+      });
+
+      // Close modal when clicking outside the image
+      modal.addEventListener("click", function (event) {
+        if (event.target === modal) {
+          modal.classList.remove("active");
+          document.body.style.overflow = ""; // Re-enable scrolling
+        }
+      });
+
+      // Close modal with Escape key
+      document.addEventListener("keydown", function (event) {
+        if (event.key === "Escape" && modal.classList.contains("active")) {
+          modal.classList.remove("active");
+          document.body.style.overflow = ""; // Re-enable scrolling
+        }
+      });
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script>
       window.jQuery ||
